2001-09-06  Bruno Haible  <haible@clisp.cons.org>

	* setenv.h: New file.
	* setenv.c: New file, from glibc-2.2.4.
	* Makefile.am (EXTRA_DIST): Add setenv.c.
	(noinst_HEADERS): Add setenv.h.

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* mkdtemp.h: New file.
	* mkdtemp.c: New file, mostly taken from glibc-2.2.4.
	* tmpdir.h: New file.
	* tmpdir.c: New file, mostly taken from glibc-2.2.4.
	* Makefile.am (EXTRA_DIST): Add mkdtemp.c.
	(libnlsut_a_SOURCES): Add tmpdir.c.
	(noinst_HEADERS): Add mkdtemp.h, tmpdir.h.

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* execute.h: New file.
	* execute.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add execute.c.
	(noinst_HEADERS): Add execute.h.

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* gcd.h: New file.
	* gcd.c: New file.
	* Makefile.am (libnlsut_a_SOURCES): Add gcd.c.
	(noinst_HEADERS): Add gcd.h.

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* pipe.h: Ensure pid_t gets declared.
	* pipe-bidi.c: Include pipe.h.
	* pipe-in.c: Likewise.
	* pipe-out.c: Likewise.

2001-08-26  Bruno Haible  <haible@clisp.cons.org>

	* printf-parse.h: Remove file.
	* printf.h: Remove file.
	* printf-prs.c: Remove file.
	* Makefile.am (EXTRA_DIST): Remove printf-prs.c.
	(noinst_HEADERS): Remove printf-parse.h, printf.h.
	* system.h (MIN): New macro.

2001-07-28  Bruno Haible  <haible@clisp.cons.org>

	* printf-parse.h: Don't include <ctype.h>.
	(ISDIGIT): New macro.
	(read_int, parse_one_spec): Use ISDIGIT instead of isdigit.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	* stdbool.h.in (_Bool): Define differently in C++ mode.

2001-07-23  Bruno Haible  <haible@clisp.cons.org>

	* system.h: Assume <limits.h> exists.
	* fstrcmp.c: Likewise.

2001-07-01  Bruno Haible  <haible@clisp.cons.org>

	* utf8-ucs4.h: New file, extracted from linebreak.c.
	* utf16-ucs4.h: New file, extracted from linebreak.c.
	* linebreak.c (u8_mbtouc_aux, u8_mbtouc): Moved to utf8-ucs4.h.